tests/ui/typeck/conversion/function_type_view_payable.sol
//@compile-flags: -Ztypeck
contract C {
    function h() view external {
    }
    function f() view external returns (bytes4) {
        function () payable external g = this.h; //~ ERROR: mismatched types
        return g.selector;
    }
}
